# Gebaren-Vertaler

./: .gitignore  DatasetMaker.py  LoadData.py  NGT_TRANSLATOR.py  ReadMe.txt  Training_program.py  gesture_dataset.csv  handmodel.pth  handmodel.py  main.py  named_pipes.py
C code/: CMakeLists.txt  main.c
MakeJSON/: CMakeLists.txt  NamedPipes.c  NamedPipes.h  main.c  memoryalocation.c  memoryalocation.h
moddel/: moddel.py
model/: handmodel.py
